# subscription

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
app/: Dockerfile  logging_config.py  main.py  settings.py
app/admin/: views.py
app/alembic/: env.py
app/alembic/versions/: 0001_create_subscription_tables.py
app/api/v1/: subscriptions.py
app/db/: engine.py  session.py
app/kafka/: consumer.py  handlers.py  schemas.py
app/models/: __init__.py  base.py  plan.py  processed_event.py  subscription.py
app/services/: __init__.py  billing_client.py  subscription.py
nginx/: nginx.conf  nginx.subscription.conf
